# secure_c_demo

./: CMakeLists.txt  README.md
project_src/: demo_project.c  demo_project.h  main.c
